--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+server.port = 6606
 
+spring.thymeleaf.cache = false  
+spring.thymeleaf.suffix = .html
+
+message.welcome = Hello, Allan est un n00b !!!
+message.select = choisi un hero.
+message.error = First Name & Last Name is required !
