--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,7 @@ spring.thymeleaf.suffix = .html
 
 message.welcome = Hello, Allan est un n00b !!!
 message.select = choisi un hero.
+
 message.error = First Name & Last Name is required !
+message.error.user4o4 = User not found !
+message.error.wtf = Wtf bro !!!!
