--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.port = 6606
 
+spring.mvc.hiddenmethod.filter.enabled=true
+
 spring.thymeleaf.cache = false  
 spring.thymeleaf.suffix = .html
 
