--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ server.port = 6606
 
 api.rest.port = 6066
 
+spring.mvc.pathmatch.matching-strategy = ant_path_matcher
+
 spring.mvc.hiddenmethod.filter.enabled=true
 
 spring.thymeleaf.cache = false  
